# auth-service

./: README.md  clean.sh  compose.yml  docker.sh
.github/workflows/: prod.yml
app-service/: Dockerfile
auth-service/: .env  Cargo.toml  Dockerfile  expand  killdockerDB.sh  setupDB.sh
auth-service/.sqlx/: query-079332766b130519613cd31c62703c8f202ecba41563ead6f6ed96653ae10ba1.json  query-52fea300732bec43f72dc4c8107c5999f9c8458d2c3c131d19b2ae077d4785b9.json
auth-service/src/: lib.rs  main.rs
auth-service/src/app_state/: app_state.rs
auth-service/src/domain/: data_store.rs  email.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_user_banned_store.rs  hasmap_user_store.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_user_banned_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/test_helpers/src/: lib.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/tests/domain/: email.rs
test_helpers/: Cargo.toml
test_helpers/src/: lib.rs
