[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "cors", "trace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
async-trait = "0.1.89"
validator = "=0.20.0"
axum-extra = { version = "0.12.1", features = ["cookie"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"]}
chrono = "0.4.42"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
rand = "0.9.2"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "postgres", "migrate"] }
pretty_env_logger = "0.5.0"
argon2 = { version = "0.5.3", features = ["std"] }
redis = "1.0.5"
tracing = "0.1.44"
tracing-subscriber = { version="0.3.23",  features = ["registry", "env-filter"]}
thiserror = "2.0.18"
color-eyre = "0.6.5"
tracing-error = "0.2.1"

[dev-dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["json", "cookies"] }
fake = "=4.4.0"
rand = "0.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
test_helpers = { path = "./test_helpers" }
